2011-12-02  John Chapman  <John.Chapman@cern.ch>

	* share/skeleton.MergeHIT.py - correct log file name when
	executing postExecs.
	* Tagging as PATJobTransforms-00-03-83

2011-12-01 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Reverting the change, as Bertrand failed to note down
	  his own change in the ChangeLog... :-(
	* Tagging as PATJobTransforms-00-03-82

2011-12-01 Attila Krasznahorkay <Attila.Krasznahorkay@cern.ch>
	* Added the NTUP_HSG5GAMZ type to Reco_trf.py
	* Tagging as PATJobTransforms-00-03-81 (Nope...)

2011-11-11 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Updated fast merge to accomodate changes to mergePOOL.exe (add -e MetaDataHdr)
    * Tagging as PATJobTransforms-00-03-80

2011-11-20 Bjoern Sarrazin <bjorn.sarrazin@cern.ch>
    * test for non integer values of event number in BaseOfBasic.matchEventsExpectEqual()
    * for each outputNTUPXXXFile argument in ConfigDic add an inputNTUPXXXFile argument (Configuration.py)
    * add MergeNTUP_trf.py and skeleton.MergeNTUP_trf.py 
    * Tagging as PATJobTransforms-00-03-79

2011-11-19 Bjoern Sarrazin <bjorn.sarrazin@cern.ch>
    * commit James' replacement of outputDAOD_ONIAMUMUHI with outputDESD_ONIAMUMUHIFile in Reco_trf.py 
    * Tagging as PATJobTransforms-00-03-78

2011-11-17  John Chapman  <John.Chapman@cern.ch>

	* share/skeleton.MergeHIT.py - move preExec/preInclude slightly
	later in skeleton. (Required for AF2 HIT file merging.)
	* Tagging as PATJobTransforms-00-03-77

2011-11-16 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Handle smoothly older versions of pyAMI with no conf file support.
    * Tagging as PATJobTransforms-00-03-76

2011-11-15 Graeme Stewart <graeme.andrew.stewart@cern.ch>
    * Support for AMI configuration file via env var AMIConfFile.

2011-11-11 Steven Beale <steven.beale@physik.uni-muenchen.de>
    * Adding option fastPoolMerge for running mergePOOL.exe 
    * Added as an extension of existing MergePool_trf.py
